# job-pipeline

./: .gitignore  README.md  import_list.txt  pyproject.toml  requirements.txt
Data/: companies.yaml
data/: companies.yaml  profile.yaml
src/jobspipeline/: import_companies.py  run.py  schemas.py  targets.py
src/jobspipeline/core/: storage.py
src/jobspipeline/scoring/: profile.py
src/jobspipeline/sources/: _text.py  ashby.py  base.py  greenhouse.py  lever.py
