[project]
name = "jobspipeline"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2",
  "httpx",
  "PyYAML",
  "sqlmodel",
  "SQLAlchemy"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobspipeline"]